--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-scroll": "^1.7.11"
   },
   "scripts": {
     "start": "react-scripts start",
