--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
     "@fortawesome/free-brands-svg-icons": "^5.8.0",
     "@fortawesome/free-solid-svg-icons": "^5.8.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
+    "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "react-scroll": "^1.7.11"
