--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.4",
     "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.4",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-scripts": "2.1.8",
     "react-scroll": "^1.7.11"
   },
